--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <h1 class="h1 text-center">Consultas medicas</h1>
 
-        <div class="btn-group d-flex" role="group" aria-label="Basic example">
+        <div class=" text-center">
             <button type="button" class="btn radiologia-btn btn-primary">Radiologia</button>
             <button type="button" class="btn traumatologia-btn btn-primary">Traumatologia</button>
             <button type="button" class="btn dental-btn btn-primary">Dental</button>
